Add some IDE suggestions